--- a/researchpanacea/frontend/package.json
+++ b/researchpanacea/frontend/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^4.1.17",
+    "package": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-client-session": "0.0.8",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
